# mstrings

./: .gitignore  Cargo.toml
src/: jstring_utils.rs  main.rs
src/mstring/: split.rs
